--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-stable_baselines3==2.3.2
-matplotlib==3.5.3
-wandb==0.17.2
+numpy==2.0.1
+tensorflow==2.17.0
+wandb==0.17.6
+matplotlib==3.9.2
 gymnasium==0.29.1
-tensorboard==2.17.0
+stable-baselines3[extra]==2.3.2
