--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,20 @@ logs/
 *.zip
 past_models/
 results/
+.env
+output/
+*.json
+*.parquet
+*.csv
+*.txt
+*.pkl
+*.tex
+*.pdf
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.ico
+*.svg
