--- a/env.yml
+++ b/env.yml
@@ -1,16 +1,22 @@
 name: dynamic_amm
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
   - python=3.9
+  - pytorch
+  - torchvision
   - numpy
   - scipy
   - polars
+  - pandas
+  - matplotlib
+  - jupyter
   - tqdm
   - pip
-  - pandas  # often useful with polars
-  - matplotlib  # for plotting results
-  - jupyter  # for interactive analysis
   - pip:
+    - tensorflow-macos  # Mac-specific TensorFlow
+    - tensorflow-metal  # Metal GPU acceleration support
     - pyarrow  # for parquet support
+    - keras
