--- a/env.yml
+++ b/env.yml
@@ -5,8 +5,6 @@ channels:
   - defaults
 dependencies:
   - python=3.9
-  - pytorch
-  - torchvision
   - numpy
   - scipy
   - polars
@@ -16,7 +14,6 @@ dependencies:
   - tqdm
   - pip
   - pip:
-    - tensorflow-macos  # Mac-specific TensorFlow
-    - tensorflow-metal  # Metal GPU acceleration support
+    - tqdm
+    - polars
     - pyarrow  # for parquet support
-    - keras
